[package]
name = "messenger"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.2.2", features = ["postgres"] }
diesel_codegen = { version = "0.16.0", features = ["postgres"]}
dotenv = "0.11.0"

# Specify which linker to use for this target
[target.x86_64-unknown-linux-gnu]
linker = "x86_64-linux-gnu-gcc"